updated board access settings
