# backend/main/router/boards/updateAccess.go
@@ -10,8 +10,8 @@ import (
 	"gorm.io/gorm"
 )
 
-type giveAccessBody = []struct {
-	UserId uuid.UUID               `json:"user_id" validate:"required,uuid4"`
+type giveAccessBody = struct {
+	UserId uuid.UUID               `json:"userId" validate:"required,uuid4"`
 	Role   *dbClient.BoardUserRole `json:"role" validate:"oneof=owner admin member commentator guest"`
 }
 
@@ -22,7 +22,7 @@ type giveAccessBody = []struct {
 // @Produce 		json
 // @Param 			id path string true "Board ID"
 // @Param 			board body giveAccessBody true "Board object that needs to be updated"
-// @Success 		204
+// @Success 		200 {string} string "Success"
 // @Failure 		400 {object} errorHandlers.Error
 // @Failure 		401 {object} errorHandlers.Error "Unauthorized if session is missing or invalid"
 // @Failure 		403 {object} errorHandlers.Error "No access to board"
@@ -57,51 +57,70 @@ func updateAccess(db *gorm.DB) gin.HandlerFunc {
 		}
 
 		if currentUserRole != dbClient.BoardRoleOwner && currentUserRole != dbClient.BoardRoleAdmin {
-			errorHandlers.Forbidden(ctx, "no access to give access to board")
+			errorHandlers.Forbidden(ctx, "no allowed to change access to board")
 			return
 		}
 
-		for _, entry := range body {
-			// change role for yourself(also works for owner try to change their role)
-			if entry.UserId == currentUserId {
-				errorHandlers.BadRequest(ctx, "can't change role for yourself", nil)
-				return
-			}
+		// the only owner can't be removed
+		if currentUserRole == dbClient.BoardRoleOwner && currentUserId == body.UserId && (body.Role == nil || *body.Role != dbClient.BoardRoleOwner) {
+			var nonCurrentUserOwner dbClient.BoardAccesses
 
-			// admin can't give admin or owner access to board
-			if currentUserRole == dbClient.BoardRoleAdmin && (*entry.Role == dbClient.BoardRoleOwner || *entry.Role == dbClient.BoardRoleAdmin) {
+			if err := db.First(&nonCurrentUserOwner, "board_id = ? AND role = ? and user_id <> ?", boardId, dbClient.BoardRoleOwner, currentUserId).Error; err != nil {
+				if err == gorm.ErrRecordNotFound {
+					errorHandlers.Forbidden(ctx, "not allowed to remove the only owner of the board. Set another owner first")
+					return
+				} else {
+					errorHandlers.InternalServerError(ctx, "failed to check access to the board")
+					return
+				}
+			}
+		}
+
+		// admin can't give/remove admin or owner access to board
+		if currentUserRole == dbClient.BoardRoleAdmin {
+			if body.Role != nil && (*body.Role == dbClient.BoardRoleOwner || *body.Role == dbClient.BoardRoleAdmin) {
 				errorHandlers.Forbidden(ctx, "admin can't give admin or owner access to board")
 				return
 			}
 
-			var boardAccess dbClient.BoardAccesses
+			if currentUserId != body.UserId {
+				var entryUserAccess dbClient.BoardAccesses
 
-			if err := db.First(&boardAccess, "board_id = ? AND user_id = ?", boardId, entry.UserId).Error; err != nil {
-				if err != gorm.ErrRecordNotFound {
+				if err := db.First(&entryUserAccess, "board_id = ? AND user_id = ?", boardId, body.UserId).Error; err != nil {
 					errorHandlers.InternalServerError(ctx, "failed to get board access")
 					return
 				}
 
-				if err := db.Create(&dbClient.BoardAccesses{BoardID: boardId, UserID: entry.UserId, Role: *entry.Role}).Error; err != nil {
-					errorHandlers.InternalServerError(ctx, "failed to create board access")
+				if entryUserAccess.Role == dbClient.BoardRoleOwner || entryUserAccess.Role == dbClient.BoardRoleAdmin {
+					errorHandlers.Forbidden(ctx, "admin can't remove admins or owners from the board")
 					return
 				}
-
-				continue
 			}
+		}
 
-			// admin can't revoke admin or owner access to board
-			if currentUserRole == dbClient.BoardRoleAdmin && (boardAccess.Role == dbClient.BoardRoleOwner || boardAccess.Role == dbClient.BoardRoleAdmin) {
-				errorHandlers.Forbidden(ctx, "admin can't revoke admin or owner access to board")
+		if body.Role == nil {
+			if err := db.Where("board_id = ? AND user_id = ?", boardId, body.UserId).Delete(&dbClient.BoardAccesses{}).Error; err != nil {
+				errorHandlers.InternalServerError(ctx, "failed to delete board access")
 				return
 			}
+		} else {
+			var bodyUserAccess dbClient.BoardAccesses
 
-			if err := db.Model(&boardAccess).Update("role", entry.Role).Error; err != nil {
+			if body.UserId == currentUserId {
+				bodyUserAccess = boardAccess
+			} else if err := db.First(&bodyUserAccess, "board_id = ? AND user_id = ?", boardId, body.UserId).Error; err != nil {
+				if err != gorm.ErrRecordNotFound {
+					errorHandlers.InternalServerError(ctx, "failed to get board access")
+					return
+				}
+			}
+
+			if err := db.Model(&bodyUserAccess).Update("role", *body.Role).Error; err != nil {
 				errorHandlers.InternalServerError(ctx, "failed to update board access")
 				return
 			}
 		}
 
-		ctx.Status(204)
+		ctx.String(200, "Success")
 	}
 }
