# backend/main/router/main.go
@@ -13,6 +13,7 @@ import (
 	boardsRouter "main/router/boards"
 	profileRouter "main/router/profile"
 	tasksRouter "main/router/tasks"
+	usersRouter "main/router/users"
 
 	"github.com/gin-contrib/cors"
 	"github.com/gin-contrib/sessions"
@@ -54,6 +55,7 @@ func New(auth *auth.Auth, db *gorm.DB, validate *validator.Validate) *gin.Engine
 	profileRouter.AddRoutes(router.Group("profile", IsAuthenticated(auth)), validate, db)
 	tasksRouter.AddRoutes(router.Group("tasks", IsAuthenticated(auth)), db, validate)
 	boardsRouter.AddRoutes(router.Group("boards", IsAuthenticated(auth)), db, validate)
+	usersRouter.AddRoutes(router.Group("users", IsAuthenticated(auth)), db)
 
 	return router
 }
